[gd_scene load_steps=3 format=3 uid="uid://bgemwbjwf2kpf"]

[ext_resource type="Script" uid="uid://dh20lurv0ctqb" path="res://user_interface/schedule/schedule.gd" id="1_bmqd4"]
[ext_resource type="StyleBox" uid="uid://lg7x2s4pkdar" path="res://user_interface/schedule/weekly_overview_header.tres" id="2_frsvj"]

[node name="Schedule" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bmqd4")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"BackgroundPanel"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="LblScheduleHeader" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Schedule"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnScheduleResource" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Schedule a Resource"

[node name="ControlSpacer2" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="PanelContainerWeeklyOverview" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"BackgroundPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview"]
layout_mode = 2

[node name="PanelContainerWeeklyViewOptions" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"BackgroundPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/PanelContainerWeeklyViewOptions"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/PanelContainerWeeklyViewOptions/VBoxContainer"]
layout_mode = 2
text = "Students"
fit_content = true

[node name="HBoxStudents" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/PanelContainerWeeklyViewOptions/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxSubjects" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/PanelContainerWeeklyViewOptions/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ControlSpacer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LblWeeklyOverviewHeader" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer"]
layout_mode = 2
text = "Week Overview"
fit_content = true

[node name="VBoxWeeklyOverviewTable" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxWeeklyOverviewHeader" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/VBoxWeeklyOverviewTable"]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainerHeader1" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/VBoxWeeklyOverviewTable/HBoxWeeklyOverviewHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2_frsvj")

[node name="MarginContainerHeader1" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/VBoxWeeklyOverviewTable/HBoxWeeklyOverviewHeader/PanelContainerHeader1"]
layout_mode = 2

[node name="LblHeader1" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/VBoxWeeklyOverviewTable/HBoxWeeklyOverviewHeader/PanelContainerHeader1/MarginContainerHeader1"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderLabel"
text = "Student"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainerHeader2" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/VBoxWeeklyOverviewTable/HBoxWeeklyOverviewHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2_frsvj")

[node name="MarginContainerHeader2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/VBoxWeeklyOverviewTable/HBoxWeeklyOverviewHeader/PanelContainerHeader2"]
layout_mode = 2

[node name="LblHeader2" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/VBoxWeeklyOverviewTable/HBoxWeeklyOverviewHeader/PanelContainerHeader2/MarginContainerHeader2"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderLabel"
text = "Sunday"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainerHeader3" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/VBoxWeeklyOverviewTable/HBoxWeeklyOverviewHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2_frsvj")

[node name="MarginContainerHeader3" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/VBoxWeeklyOverviewTable/HBoxWeeklyOverviewHeader/PanelContainerHeader3"]
layout_mode = 2

[node name="LblHeader3" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/VBoxWeeklyOverviewTable/HBoxWeeklyOverviewHeader/PanelContainerHeader3/MarginContainerHeader3"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderLabel"
text = "Monday"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainerHeader4" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/VBoxWeeklyOverviewTable/HBoxWeeklyOverviewHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2_frsvj")

[node name="MarginContainerColumn4" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/VBoxWeeklyOverviewTable/HBoxWeeklyOverviewHeader/PanelContainerHeader4"]
layout_mode = 2

[node name="LblColumn4" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/VBoxWeeklyOverviewTable/HBoxWeeklyOverviewHeader/PanelContainerHeader4/MarginContainerColumn4"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderLabel"
text = "Tuesday"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainerHeader5" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/VBoxWeeklyOverviewTable/HBoxWeeklyOverviewHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2_frsvj")

[node name="MarginContainerHeader5" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/VBoxWeeklyOverviewTable/HBoxWeeklyOverviewHeader/PanelContainerHeader5"]
layout_mode = 2

[node name="LblHeader5" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/VBoxWeeklyOverviewTable/HBoxWeeklyOverviewHeader/PanelContainerHeader5/MarginContainerHeader5"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderLabel"
text = "Wednesday"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainerHeader6" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/VBoxWeeklyOverviewTable/HBoxWeeklyOverviewHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2_frsvj")

[node name="MarginContainerHeader6" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/VBoxWeeklyOverviewTable/HBoxWeeklyOverviewHeader/PanelContainerHeader6"]
layout_mode = 2

[node name="LblHeader6" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/VBoxWeeklyOverviewTable/HBoxWeeklyOverviewHeader/PanelContainerHeader6/MarginContainerHeader6"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderLabel"
text = "Thursday"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainerHeader7" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/VBoxWeeklyOverviewTable/HBoxWeeklyOverviewHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2_frsvj")

[node name="MarginContainerHeader7" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/VBoxWeeklyOverviewTable/HBoxWeeklyOverviewHeader/PanelContainerHeader7"]
layout_mode = 2

[node name="LblHeader7" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/VBoxWeeklyOverviewTable/HBoxWeeklyOverviewHeader/PanelContainerHeader7/MarginContainerHeader7"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderLabel"
text = "Friday"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainerHeader8" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/VBoxWeeklyOverviewTable/HBoxWeeklyOverviewHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2_frsvj")

[node name="MarginContainerHeader8" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/VBoxWeeklyOverviewTable/HBoxWeeklyOverviewHeader/PanelContainerHeader8"]
layout_mode = 2

[node name="LblHeader8" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainerWeeklyOverview/VBoxContainer/VBoxWeeklyOverviewTable/HBoxWeeklyOverviewHeader/PanelContainerHeader8/MarginContainerHeader8"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderLabel"
text = "Saturday"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainerSubjectOverview" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/BtnScheduleResource" to="." method="_on_btn_schedule_resource_pressed"]
